--- a/ci/taskcat.yml
+++ b/ci/taskcat.yml
@@ -1,31 +1,70 @@
 global:
+  govcloud: true
   marketplace-ami: false
-  owner: quickstart-eng@amazon.com
-  qsname: quickstart-amazon-eks
+  owner: quickstart@amazon.com
+  qsname: quickstart-aws-vpc
   regions:
-    - us-east-1
-    - us-east-2
-    - us-west-2
+    - ap-northeast-1
+    - ap-northeast-2
+    - ap-south-1
+    - ap-southeast-1
+    - ap-southeast-2
+    - ca-central-1
     - eu-central-1
     - eu-west-1
     - eu-west-2
-    - eu-west-3
-    - ap-northeast-1
-    - ap-southeast-1
-    - ap-southeast-2
+    - us-east-1
+    - us-east-2
+    - us-west-1
+    - us-west-2
   reporting: true
-  package-lambda: true
 tests:
-  quickstart-amazon-eks-defaults:
-    parameter_input: amazon-eks-defaults.json
-    template_file: amazon-eks-master.template.yaml
-  quickstart-amazon-eks-efs:
-    parameter_input: amazon-eks-efs.json
-    template_file: amazon-eks-master.template.yaml
+  vpc-defaults:
+    parameter_input: aws-vpc-defaults.json
+    template_file: aws-vpc.template
+  vpc-complete:
+    parameter_input: aws-vpc-complete.json
+    template_file: aws-vpc.template
+  vpc-defaults-sa-east-1:
+    parameter_input: aws-vpc-sa-east-1.json
+    template_file: aws-vpc.template
+    regions:
+      - sa-east-1
+  vpc-public:
+    parameter_input: aws-vpc-public.json
+    template_file: aws-vpc.template
+  3az-eu-west-1:
+    parameter_input: aws-vpc-3az.json
+    regions:
+      - eu-west-1
+    template_file: aws-vpc.template
+  3az-complete-us-east-2:
+    parameter_input: aws-vpc-3az-complete.json
+    regions:
+      - us-east-2
+    template_file: aws-vpc.template
+  3az-public-us-west-2:
+    parameter_input: aws-vpc-3az-public.json
     regions:
       - us-west-2
-  quickstart-amazon-eks-cluster-autoscaler:
-    parameter_input: amazon-eks-cluster-autoscaler.json
-    template_file: amazon-eks-master.template.yaml
+    template_file: aws-vpc.template
+  4az-us-east-1:
+    parameter_input: aws-vpc-4az.json
     regions:
-      - eu-central-1
+      - us-east-1
+    template_file: aws-vpc.template
+  4az-complete-us-east-1:
+    parameter_input: aws-vpc-4az-complete.json
+    regions:
+      - us-east-1
+    template_file: aws-vpc.template
+  4az-public-us-east-1:
+    parameter_input: aws-vpc-4az-public.json
+    regions:
+      - us-east-1
+    template_file: aws-vpc.template
+  dedicated-us-west-1:
+    parameter_input: aws-vpc-dedicated.json
+    regions:
+      - us-west-1
+    template_file: aws-vpc.template
